# Haskoop

./: .gitignore  Haskoop.cabal  Haskoop.hs  LICENSE  README.md  Wordcount.hs
examples/wordcount/: Wordcount.hs
src/: Haskoop.hs  Paths_Haskoop.hs
src/Haskoop/: Core.hs  Types.hs
src/Haskoop/Configuration/: Configuration.hs  Streaming.hs  Types.hs
src/examples/wordcount/: words.txt
