name:                haskoop
version:             0.1.0.0
synopsis:            Haskoop is a Haskell library for working with Hadoop Streaming.
homepage:            http://haskoop.github.com
license:             AllRightsReserved
license-file:        LICENSE
author:              Jeroen Janssen
maintainer:          jejansse@gmail.com
copyright:           (c) 2013 Jeroen Janssen
category:            Development
build-type:          Simple
cabal-version:       >=1.8
flag buildexamples
  description: build example executables
  default: False
library
  exposed-modules:     Haskoop
  build-depends:       base ==4.5.*, process ==1.1.*
  hs-source-dirs:      src
executable wordcount
  if !flag(buildexamples)
    buildable: False
  build-depends:       base ==4.5.*, process ==1.1.*
  hs-source-dirs:      src, examples/wordcount
  data-files:          examples/wordcount/words.txt
  main-is:             Wordcount.hs
  
